--- a/eta-kafka-conduit.cabal
+++ b/eta-kafka-conduit.cabal
@@ -31,12 +31,14 @@ executable kafka-conduit-example
   default-language:    Haskell2010
 
 library
-  exposed-modules:     Kafka.Conduit.Source
+  exposed-modules:     Kafka.Conduit
+                     , Kafka.Conduit.Source
                      , Kafka.Conduit.Sink
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.8 && <4.9
                      , eta-kafka-client
+                     , bifunctors
                      , conduit
                      , resourcet
                      , transformers
