--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ dependencies:
     - wget -qO- https://get.haskellstack.org/ | sh
     - scripts/eta-install.sh
     - git clone --depth 1 https://github.com/haskell-works/eta-kafka-client ~/eta-kafka-client
+    - epm sandbox init
     - epm sandbox add-source ~/eta-kafka-client
 
   override:
